<resources>
    <string name="app_name">MyApp</string>
    <string name="food_name">Pick food</string>
    <string name="food_wt">Set weight</string>
    <string name="button_add">Add meal</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_clean">Clear DB</string>
    <string name="button_send">Send</string>
    <string name="MealEditorTitle">Eat</string>
    <string name="arrow_left">&lt;</string>
    <string name="arrow_right">&gt;</string>
    <string-array name="screens_array">
        <item>Today</item>
        <item>Stats</item>
        <item>Products</item>
        <item>Settings</item>
    </string-array>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="share">Share</string>
    <string name="action_search">Search</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="alert_dialog_cancel">Cancel</string>
    <string name="alert_dialog_two_buttons_title">we\'ve got a problem</string>
    <string name="prod_prot">Protein</string>
    <string name="prod_fat">Fat</string>
    <string name="prod_carb">Carb</string>
    <string name="prod_name">Name</string>
    <string name="ProductEditorTitle">Edit</string>
</resources>
